--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
         
         <footer>
             <a href="">WebStudio</a>
-            <address>г.Киев, пр-т Леси Украинки, 26</address>
+            <address>
+                <p>г.Киев, пр-т Леси Украинки, 26</p> 
             <ul>
                 <li>
                 <a href="mailto:info@example.com">info@example.com</a>
@@ -103,6 +104,7 @@
                 <a href="tel:+380991111111">+38 099 111 11 11</a>
                 </li>
             </ul>
+            </address>
         </footer>
     </main>
 </body>
